--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,67 +5,68 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇻🇳 越南-5.98MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.82MB/s(Youtube:不良林), server: 203.138.98.199, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-1.52MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-231.2KB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 520faa7a-e763-457d-ab9a-de4b6607df77, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
-  - {name: 🇸🇬 新加坡-1.82MB/s(Youtube:不良林), server: 165.154.253.49, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-10.45MB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-3.39MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
   - {name: 🇬🇧 英国-1.75MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-5.12MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-7.40MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.36MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.59MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20160, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.59MB/s(Youtube:不良林), server: 159.223.54.93, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.223.54.93}}
   - {name: 🇨🇳 台湾-13.97MB/s(Youtube:不良林), server: tw01.henet.cyou, port: 20000, type: vmess, uuid: a55602c8-d3d4-4c7f-b552-875c624b899c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw01.henet.cyou}}
+  - {name: 🇸🇬 新加坡-3.18MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-7.96MB/s(Youtube:不良林), server: 203.138.98.199, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-5.17MB/s(Youtube:不良林), server: 165.154.253.49, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.81MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.82MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-231.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.45MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.39MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-13.97MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇻🇳 越南-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.82MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-231.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.45MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.39MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-13.97MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.82MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-231.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.45MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.39MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-13.97MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-10.45MB/s(Youtube:不良林)
       - 🇨🇳 台湾-13.97MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -73,47 +74,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇻🇳 越南-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.82MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-231.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.45MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.39MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-13.97MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇻🇳 越南-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.82MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-231.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.45MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.39MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-13.97MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.82MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-231.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.45MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.39MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-13.97MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.82MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-231.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.45MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.39MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
       - 🇨🇳 台湾-13.97MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
