--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-6.53MB/s(Youtube:不良林), server: 164.70.68.67, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.69MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.12MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-3.16MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.41MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-2.98MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.59MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 61c4c45e-d5c8-47ed-ae28-cee95f09b3b7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇨🇳 中国-516.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 26023, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.19MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-166.9KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇺🇸 美国-2.38MB/s(Youtube:不良林), server: rn.tianxie.jp.eu.org, port: 443, type: trojan, password: c06bb8e0-7989-4885-9560-df320b7ce1d3, sni: rn.tianxie.jp.eu.org, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-10.60MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
   - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-10.89MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30170, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.43MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
+  - {name: 🇺🇸 美国-4.28MB/s(Youtube:不良林), server: 154.17.28.38, port: 49353, type: vmess, uuid: f762694a-948b-4918-a657-6ca9b10f2d32, alterId: 233, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-166.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-166.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-166.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-10.60MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-166.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-166.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-166.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-166.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
